--- a/Birch 2.html
+++ b/Birch 2.html
@@ -92,9 +92,14 @@ div {
 <h3>The environment of birch and its adaptations</h3>
 <marquee scrollamount="5">This is a very important part of plants that i nearly forgot!</marquee>
 <div class="center">
-  <p>Birch is a tree that normally grows around lakes and streams.  It grows in the winter season<br/>
+  <p>Birch is a tree that normally grows around lakes and streams.  It grows in the tundras<br/>
   and surprisingly easily grows in areas destroyed by wildfires. Birch trees will mostly grow in Europe<br/>
   and even more in Northern Europe.</p>
+  </div>
+  <marquee scrollamount="6">How has birch adapted to it environment in the tundra</marquee>
+  <div class="center">
+    <p></p>
+  </div>
 <a href="https://sosobo-code.github.io/2048.html">Click here and you will be transported to the quiz (Do not cheat)</a>
 </div>
 </body>
