--- a/Links.html
+++ b/Links.html
@@ -59,6 +59,7 @@ p {
 <a href="https://en.wikipedia.org/wiki/Birch">Wikipedia(There was almost no other source)</a>
 <br/>
 <br/>
+<a href="https://www.enotes.com/">Enotes</a>
 
 
 
