--- a/Secret.html
+++ b/Secret.html
@@ -12,11 +12,11 @@
   function checkPassword() {
    var password = document.getElementById("passwordBox");
    var passwordText = password.value;
-   if(passwordText == "trash1") {
+   if(passwordText == "Obamaslastname") {
     return true;
    }
    alert("you entered the wrong password please try again");
-   alert("trash")
+   alert("Chicken nugget")
    return false;    
    }
  </script>
@@ -29,8 +29,8 @@
  <p style="font-size: 30pt;">Enter password for good content</p>
  <p>Please enter the password to view this good content.</p>
  <p>Password:<input id="passwordBox" type="password"/></p>
- <a href="file:///C:/Users/arrsh/OneDrive/Desktop/Assesment/Birch.html" onclick="return checkPassword();">
-  Click here to submit password and not cry
+ <a href="https://www.youtube.com/channel/UCQz76OpF7U7hnU4EWXgt3zg" onclick="return checkPassword();">
+  Click here to submit password and go to epic place
  </a>
 </body>
 </html>
