--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ marquee {
   <a href="https://scratch.mit.edu/users/sosobo/">My scratch page</a>
   <a href="https://www.youtube.com/channel/UCQz76OpF7U7hnU4EWXgt3zg">My youtube channel</a>
   <a href="https://sosobo-code.github.io/Interactions.html">Interactive entertainment</a>
-  <a href="file:///C:/Users/arrsh/OneDrive/Desktop/Assesment/Secret.html">Secret</a>
+  <a href="https://sosobo-code.github.io/Secret.html">Admin access</a>
 </div>
 
 <div style="padding-left:16px">
