--- a/Interactions.html
+++ b/Interactions.html
@@ -62,13 +62,13 @@ p {
   <marquee scrollamount="25">Uh no i think i am</marquee>
   
   
-  <button type="button" onclick="alert('Deleting system32')">Click me for Obamas last name</button>
+  <button type="button" onclick="alert('Obamas last name is Obama')">Click me for Obamas last name</button>
   <br/>
   <br/>
-  <button type="button" onclick="alert('Deleting Life')">Click me to get rid of your depression</button>
+  <button type="button" onclick="alert('Thats not how it works')">Click me to get rid of your depression</button>
   <br/>
   <br/>
-  <button type="button" onclick="alert('Downloading bonzo buddy')">click me cause why not</button>
+  <button type="button" onclick="alert('Deleting System 32')">click me cause why not</button>
 </div>
 
 </body>
