--- a/Secret.html
+++ b/Secret.html
@@ -22,14 +22,14 @@
 </head>
 <body>
     <script>
-        alert("BOT: E.N.T.E.R. T.H.E .R.I.G.H.T. P.A.S.S.W.O.R.D. ")
+        alert("Popup window")
         </script>   
     </script>
- <p style="font-size: 30pt;">Enter password for good content</p>
- <p>Please enter the password to view this good content.</p>
+ <p style="font-size: 30pt;">Enter password</p>
+ <p>Please enter the password.</p>
  <p>Password:<input id="passwordBox" type="password"/></p>
  <a href="https://www.youtube.com/channel/UCQz76OpF7U7hnU4EWXgt3zg" onclick="return checkPassword();">
-  Click here to submit password and go to epic place
- </a>
+  Click here to submit password
+ <[gr0ijg0/a>
 </body>
 </html>
