--- a/Interactions.html
+++ b/Interactions.html
@@ -62,10 +62,10 @@ p {
   <marquee scrollamount="25">Uh no i think i am</marquee>
   
   
-  <button type="button" onclick="alert('Obamas last name is Obama')">Click me for Obamas last name</button>
+  <button type="button" onclick="alert('THe answer is ((Script Error))')">Click me for Obamas last name</button>
   <br/>
   <br/>
-  <button type="button" onclick="alert('Thats not how it works')">Click me to get rid of your depression</button>
+  <button type="button" onclick="alert('Downloading Files loadiing 99% esmimated time (22 centurys.')">Click for Half Life 3</button>
   <br/>
   <br/>
   <button type="button" onclick="alert('Deleting System 32')">click me cause why not</button>
