--- a/Interactions.html
+++ b/Interactions.html
@@ -65,7 +65,7 @@ p {
   <button type="button" onclick="alert('THe answer is ((Script Error))')">Click me for Obamas last name</button>
   <br/>
   <br/>
-  <button type="button" onclick="alert('Downloading Files loadiing 99% esmimated time (22 centurys.')">Click for Half Life 3</button>
+  <button type="button" onclick="alert('Downloading Files loadiing 99% estmimated time (22 centurys.')">Click for Half Life 3</button>
   <br/>
   <br/>
   <button type="button" onclick="alert('Deleting System 32')">click me cause why not</button>
