--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+  background: linear-gradient(90deg, #f8dfa1, #005792, #f8dfa1);
+  background-size: 400% 400%;
+  animation: gradientBG 10s ease infinite;
+}
+
+@keyframes gradientBG {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
 }
 
 .topnav {
@@ -20,6 +29,7 @@ body {
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
+  border-radius: 25px;
 }
 
 .topnav a:hover {
@@ -31,6 +41,7 @@ body {
   background-color: #f8dfa1;
   color: white;
 }
+
 h1 {
   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
