--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
 <style>
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: sans-serif;
+  text-align: center;
+  color: white;
   background: linear-gradient(90deg, #f8dfa1, #005792, #f8dfa1);
   background-size: 400% 400%;
   animation: gradientBG 10s ease infinite;
 }
+
 
 @keyframes gradientBG {
   0% { background-position: 0% 50%; }
@@ -67,10 +70,10 @@ marquee {
   <a href="https://sosobo-code.github.io/Secret.html">Admin access</a>
 </div>
 
-<div style="padding-left:16px">
+<div>
   <h1>Welcome to Arrshan's homepage!</h1>
   <h2>  This will become really cool in the future</h2>
-  <p>There are a few links click on one to be transported to a new site</p>
+  <h2>There are a few links click on one to be transported to a new site</h2>
 </div>
 
 </body>
