--- a/Secret.html
+++ b/Secret.html
@@ -4,9 +4,21 @@
  <title>passowrd</title>
  <style>
   body {
-   background-color: lightgray;
-   padding: 30px;
-  }
+  margin: 0;
+  font-family: sans-serif;
+  text-align: center;
+  color: white;
+  background: linear-gradient(90deg, #f8dfa1, #005792, #f8dfa1);
+  background-size: 400% 400%;
+  animation: gradientBG 10s ease infinite;
+}
+
+
+@keyframes gradientBG {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
  </style>
  <script>
   function checkPassword() {
