--- a/Secret.html
+++ b/Secret.html
@@ -8,7 +8,7 @@
   font-family: sans-serif;
   text-align: center;
   color: white;
-  background: linear-gradient(90deg, #f8dfa1, #005792, #f8dfa1);
+  background: linear-gradient(90deg, #dda1f8, #0c76bd, #07c469);
   background-size: 400% 400%;
   animation: gradientBG 10s ease infinite;
 }
