--- a/Secret.html
+++ b/Secret.html
@@ -8,10 +8,11 @@
   font-family: sans-serif;
   text-align: center;
   color: white;
-  background: linear-gradient(90deg, #dda1f8, #0c76bd, #07c469);
+  background: linear-gradient(90deg, #f8dfa1, #005792, #f8dfa1);
   background-size: 400% 400%;
   animation: gradientBG 10s ease infinite;
 }
+
 
 
 @keyframes gradientBG {
@@ -19,6 +20,55 @@
   50% { background-position: 100% 50%; }
   100% { background-position: 0% 50%; }
 }
+.topnav {
+  overflow: hidden;
+  background-color:rgba(0, 0, 0, 0.203);
+}
+
+.topnav a { 
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  border-radius: 25px;
+}
+
+.topnav a:hover {
+  background-color: grey;
+  color:#f8dfa1;
+}
+
+.topnav a.active {
+  background-color: #f8dfa1;
+  color: white;
+}
+
+h1 {
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+}
+h2 {
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif 
+}
+p {
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+}
+marquee {
+  font-family:'Courier New', Courier, monospace
+}
+</style>
+</head>
+<body>
+<div class="topnav">
+  <a class="active" href="file:///C:/Users/arrsh/OneDrive/Desktop/Coding/P.html">Click of one of these guys!</a>
+  <a href="file:///C:/Users/arrsh/OneDrive/Desktop/Assesment/index.html">Home</a>
+  <a href="file:///C:/Users/arrsh/OneDrive/Desktop/Assesment/Games.html">Game</a>
+  <a href="https://scratch.mit.edu/users/sosobo/">My scratch page</a>
+  <a href="https://www.youtube.com/channel/UCQz76OpF7U7hnU4EWXgt3zg">My youtube channel</a>
+  <a href="https://sosobo-code.github.io/Interactions.html">Interactive entertainment</a>
+  <a href="https://sosobo-code.github.io/Secret.html">Admin access</a>
+</div>
  </style>
  <script>
   function checkPassword() {
