--- a/Secret.html
+++ b/Secret.html
@@ -62,7 +62,7 @@ marquee {
 <body>
 <div class="topnav">
   <a class="active" href="file:///C:/Users/arrsh/OneDrive/Desktop/Coding/P.html">Click of one of these guys!</a>
-  <a href="file:///C:/Users/arrsh/OneDrive/Desktop/Assesment/index.html">Home</a>
+  <a href="https://sosobo-code.github.io/">Home</a>
   <a href="file:///C:/Users/arrsh/OneDrive/Desktop/Assesment/Games.html">Game</a>
   <a href="https://scratch.mit.edu/users/sosobo/">My scratch page</a>
   <a href="https://www.youtube.com/channel/UCQz76OpF7U7hnU4EWXgt3zg">My youtube channel</a>
