--- a/Secret.html
+++ b/Secret.html
@@ -5,7 +5,7 @@
  <style>
   body {
   margin: 0;
-  font-family: sans-serif;
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   text-align: center;
   color: white;
   background: linear-gradient(90deg, #f8dfa1, #005792, #f8dfa1);
