--- a/Secret.html
+++ b/Secret.html
@@ -91,7 +91,6 @@ marquee {
  <p>Please enter the password.</p>
  <p>Password:<input id="passwordBox" type="password"/></p>
  <a href="https://www.youtube.com/channel/UCQz76OpF7U7hnU4EWXgt3zg" onclick="return checkPassword();">
-  Click here to submit password
- <[gr0ijg0/a>
+  <p>Click here to submit password</p>
 </body>
 </html>
