--- a/Secret.html
+++ b/Secret.html
@@ -5,10 +5,10 @@
  <style>
   body {
   margin: 0;
-  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-family: sans-serif;
   text-align: center;
   color: white;
-  background: linear-gradient(90deg, #f8dfa1, #005792, #f8dfa1);
+  background: linear-gradient(90deg, #0cb6c9, #005792, #46c607);
   background-size: 400% 400%;
   animation: gradientBG 10s ease infinite;
 }
@@ -91,6 +91,6 @@ marquee {
  <p>Please enter the password.</p>
  <p>Password:<input id="passwordBox" type="password"/></p>
  <a href="https://www.youtube.com/channel/UCQz76OpF7U7hnU4EWXgt3zg" onclick="return checkPassword();">
-  <p>Click here to submit password</p>
+  <p>Click here to Submit</p>
 </body>
 </html>
