--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ body {
   font-family: sans-serif;
   text-align: center;
   color: white;
-  background: linear-gradient(90deg, #f8dfa1, #005792, #f8dfa1);
+  background: linear-gradient(90deg, #a49262, #005792, #a18e1d);
   background-size: 400% 400%;
   animation: gradientBG 10s ease infinite;
 }
@@ -37,11 +37,11 @@ body {
 
 .topnav a:hover {
   background-color: grey;
-  color:#f8dfa1;
+  color:#2b96de;
 }
 
 .topnav a.active {
-  background-color: #f8dfa1;
+  background-color: #2b96de;
   color: white;
 }
 
