--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ body {
   font-family: sans-serif;
   text-align: center;
   color: white;
-  background: linear-gradient(90deg, #a49262, #005792, #a18e1d);
+  background: linear-gradient(90deg, #a49262, #005792, #d8f8a1);
   background-size: 400% 400%;
   animation: gradientBG 10s ease infinite;
 }
@@ -75,6 +75,6 @@ marquee {
   <h2>  This will become really cool in the future</h2>
   <h2>There are a few links click on one to be transported to a new site</h2>
 </div>
-
+</video>
 </body>
 </html>
