--- a/Secret.html
+++ b/Secret.html
@@ -87,7 +87,7 @@ marquee {
         alert("Popup window")
         </script>   
     </script>
- <p style="font-size: 30pt;">Enter password</p>
+ <h1 style="font-size: 30pt;">Enter password</h1>
  <p>Please enter the password.</p>
  <p>Password:<input id="passwordBox" type="password"/></p>
  <a href="https://www.youtube.com/channel/UCQz76OpF7U7hnU4EWXgt3zg" onclick="return checkPassword();">
