--- a/Interactions.html
+++ b/Interactions.html
@@ -5,12 +5,24 @@
 <style>
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: sans-serif;
+  text-align: center;
+  color: white;
+  background: linear-gradient(90deg, #a49262, #005792, #d8f8a1);
+  background-size: 400% 400%;
+  animation: gradientBG 10s ease infinite;
+}
+
+
+@keyframes gradientBG {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
 }
 
 .topnav {
   overflow: hidden;
-  background-color:black;
+  background-color:rgba(0, 0, 0, 0.203);
 }
 
 .topnav a { 
@@ -20,17 +32,19 @@ body {
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
+  border-radius: 25px;
 }
 
 .topnav a:hover {
   background-color: grey;
-  color:#f8dfa1;
+  color:#2b96de;
 }
 
 .topnav a.active {
-  background-color: #f8dfa1;
+  background-color: #2b96de;
   color: white;
 }
+
 h1 {
   font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
@@ -40,19 +54,20 @@ h2 {
 p {
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
 }
+marquee {
+  font-family:'Courier New', Courier, monospace
+}
 </style>
 </head>
 <body>
-
 <div class="topnav">
   <a class="active" href="file:///C:/Users/arrsh/OneDrive/Desktop/Coding/P.html">Click of one of these guys!</a>
-  <a href="https://sosobo-code.github.io/index.html">Home</a>
-  <a href="file:///C:/Users/arrsh/OneDrive/Desktop/Assesment/Birch 2.html">Assesment document</a>
+  <a href="file:///C:/Users/arrsh/OneDrive/Desktop/Assesment/index.html">Home</a>
   <a href="file:///C:/Users/arrsh/OneDrive/Desktop/Assesment/Games.html">Game</a>
   <a href="https://scratch.mit.edu/users/sosobo/">My scratch page</a>
   <a href="https://www.youtube.com/channel/UCQz76OpF7U7hnU4EWXgt3zg">My youtube channel</a>
-  <a href="file:///C:/Users/arrsh/OneDrive/Desktop/Coding/Interactions.html">Interactive entertainment</a>
-  <a href="https://sosobo-code.github.io/Secret.html">Secret</a>
+  <a href="https://sosobo-code.github.io/Interactions.html">Interactive entertainment</a>
+  <a href="https://sosobo-code.github.io/Secret.html">Admin access</a>
 </div>
 
 <div style="padding-left:16px">
