--- a/Interactions.html
+++ b/Interactions.html
@@ -72,9 +72,9 @@ marquee {
 
 <div style="padding-left:16px">
   <h1> interactions!!!</h1>
-  <marquee scrollamount="15">I am the coolest moving text ever</marquee>
-  <marquee scrollamount="20">No i am!</marquee>
-  <marquee scrollamount="25">Uh no i think i am</marquee>
+  <marquee scrollamount="15">I am a moving text</marquee>
+  <marquee scrollamount="20">So am I!</marquee>
+  <marquee scrollamount="25">MARQUEE!</marquee>
   
   
   <button type="button" onclick="alert('THe answer is ((Script Error))')">Click me for Obamas last name</button>
