--- a/Interactions.html
+++ b/Interactions.html
@@ -77,13 +77,13 @@ marquee {
   <marquee scrollamount="25">MARQUEE!</marquee>
   
   
-  <button type="button" onclick="alert('THe answer is ((Script Error))')">Click me for Obamas last name</button>
+  <button type="button" onclick="alert('Your Gift Voucher code is ((Script Error))')">Click me for 10,000 Fortnite Vbucks</button>
   <br/>
   <br/>
-  <button type="button" onclick="alert('Downloading Files loadiing 99% estmimated time (22 centurys.')">Click for Half Life 3</button>
+  <button type="button" onclick="alert('Downloading Files loadiing 99% estmimated time (22.32 centurys.')">Click for Half Life 3</button>
   <br/>
   <br/>
-  <button type="button" onclick="alert('Deleting System 32')">click me cause why not</button>
+  <button type="button" onclick="alert('Deleting System 32')">click me because why not</button>
 </div>
 
 </body>
