--- a/Interactions.html
+++ b/Interactions.html
@@ -8,7 +8,7 @@ body {
   font-family: sans-serif;
   text-align: center;
   color: white;
-  background: linear-gradient(90deg, #a49262, #005792, #d8f8a1);
+  background: linear-gradient(90deg, #cc059a, #1382cc, #b004e4);
   background-size: 400% 400%;
   animation: gradientBG 10s ease infinite;
 }
@@ -62,7 +62,7 @@ marquee {
 <body>
 <div class="topnav">
   <a class="active" href="file:///C:/Users/arrsh/OneDrive/Desktop/Coding/P.html">Click of one of these guys!</a>
-  <a href="file:///C:/Users/arrsh/OneDrive/Desktop/Assesment/index.html">Home</a>
+  <a href="https://sosobo-code.github.io/index.html">Home</a>
   <a href="file:///C:/Users/arrsh/OneDrive/Desktop/Assesment/Games.html">Game</a>
   <a href="https://scratch.mit.edu/users/sosobo/">My scratch page</a>
   <a href="https://www.youtube.com/channel/UCQz76OpF7U7hnU4EWXgt3zg">My youtube channel</a>
