--- a/Interactions.html
+++ b/Interactions.html
@@ -58,6 +58,11 @@ marquee {
   font-family:'Courier New', Courier, monospace
 }
 </style>
+<script>
+  function audioplay(p1, p2) {
+  return p1 * p2;
+}
+</script>
 </head>
 <body>
 <div class="topnav">
@@ -84,6 +89,9 @@ marquee {
   <br/>
   <br/>
   <button type="button" onclick="alert('Deleting System 32')">click me because why not</button>
+  <br/>
+  <br/>
+  <button type="button" onclick="alert('Deleting System 32')">clickme</button>
 </div>
 
 </body>
