--- a/Interactions.html
+++ b/Interactions.html
@@ -85,7 +85,7 @@ marquee {
   <button type="button" onclick="alert('Your Gift Voucher code is ((Script Error))')">Click me for 10,000 Fortnite Vbucks</button>
   <br/>
   <br/>
-  <button type="button" onclick="alert('Downloading Files loadiing 99% estmimated time (22.32 centurys.')">Click for Half Life 3</button>
+  <button type="button" onclick="alert('Downloading Hunt Down the Freeman...')">Click for Half Life 3</button>
   <br/>
   <br/>
   <button type="button" onclick="alert('Deleting System 32')">click me because why not</button>
