--- a/Interactions.html
+++ b/Interactions.html
@@ -78,8 +78,8 @@ marquee {
 <div style="padding-left:16px">
   <h1> interactions!!!</h1>
   <marquee scrollamount="15">I am a moving text</marquee>
-  <marquee scrollamount="20">So am I!</marquee>
-  <marquee scrollamount="25">MARQUEE!</marquee>
+  <marquee scrollamount="20">Marquee?</marquee>
+  <marquee scrollamount="25">Yes, it is marquee</marquee>
   
   
   <button type="button" onclick="alert('Your Gift Voucher code is ((Script Error))')">Click me for 10,000 Fortnite Vbucks</button>
