--- a/Secret.html
+++ b/Secret.html
@@ -74,7 +74,7 @@ marquee {
   function checkPassword() {
    var password = document.getElementById("passwordBox");
    var passwordText = password.value;
-   if(passwordText == "Obamaslastname") {
+   if(passwordText == "password123") {
     return true;
    }
    alert("you entered the wrong password please try again");
