--- a/Secret.html
+++ b/Secret.html
@@ -90,7 +90,7 @@ marquee {
  <h1 style="font-size: 30pt;">Enter password</h1>
  <p>Please enter the password.</p>
  <p>Password:<input id="passwordBox" type="password"/></p>
- <a href="https://www.youtube.com/channel/UCQz76OpF7U7hnU4EWXgt3zg" onclick="return checkPassword();">
+ <a href="https://sosobo-code.github.io/Secretfound.html" onclick="return checkPassword();">
   <p>Click here to Submit</p>
 </body>
 </html>
