--- a/Secretfound.html
+++ b/Secretfound.html
@@ -1,8 +1,78 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <body>
-            <p>Good Job</p>
-        </body>
-    </head>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  margin: 0;
+  font-family: sans-serif;
+  text-align: center;
+  color: white;
+  background: linear-gradient(90deg, #a49262, #005792, #d8f8a1);
+  background-size: 400% 400%;
+  animation: gradientBG 10s ease infinite;
+}
+
+
+@keyframes gradientBG {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
+
+.topnav {
+  overflow: hidden;
+  background-color:rgba(0, 0, 0, 0.203);
+}
+
+.topnav a { 
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  border-radius: 25px;
+}
+
+.topnav a:hover {
+  background-color: grey;
+  color:#ffffff;
+}
+
+.topnav a.active {
+  background-color: #2b96de;
+  color: white;
+}
+
+h1 {
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+}
+h2 {
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif 
+}
+p {
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
+}
+marquee {
+  font-family:'Courier New', Courier, monospace
+}
+</style>
+</head>
+<body>
+<div class="topnav">
+  <a class="active" href="file:///C:/Users/arrsh/OneDrive/Desktop/Coding/P.html">Click of one of these guys!</a>
+  <a href="file:///C:/Users/arrsh/OneDrive/Desktop/Assesment/index.html">Home</a>
+  <a href="file:///C:/Users/arrsh/OneDrive/Desktop/Assesment/Games.html">Game</a>
+  <a href="https://scratch.mit.edu/users/sosobo/">My scratch page</a>
+  <a href="https://www.youtube.com/channel/UCQz76OpF7U7hnU4EWXgt3zg">My youtube channel</a>
+  <a href="https://sosobo-code.github.io/Interactions.html">Interactive entertainment</a>
+  <a href="https://sosobo-code.github.io/Secret.html">Admin access</a>
+</div>
+
+<div>
+  <h1>Welcome to Arrshan Eats!</h1>
+</div>
+<iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F8IwtmW8mcWkdvBIZF9W8rn%2FArrshan-Eats%3Ftype%3Ddesign%26node-id%3D154-22%26t%3DwMsjiPBgcTGUejbC-1%26scaling%3Dmin-zoom%26page-id%3D0%253A1%26starting-point-node-id%3D154%253A22%26mode%3Ddesign" allowfullscreen></iframe>
+</body>
 </html>
