--- a/Interactions.html
+++ b/Interactions.html
@@ -82,16 +82,16 @@ marquee {
   <marquee scrollamount="25">Yes, it is marquee</marquee>
   
   
-  <button type="button" onclick="alert('Your Gift Voucher code is ((Script Error))')">Click me for 10,000 Fortnite Vbucks</button>
+  <button type="button" onclick="alert('Your Gift Voucher code is ((Script Error))')">Click me for $1,000,000 Amazon Voucher</button>
   <br/>
   <br/>
-  <button type="button" onclick="alert('Downloading Hunt Down the Freeman...')">Click for Half Life 3</button>
+  <button type="button" onclick="alert('Downloading | 99% Complete | Estimated Time for Completion | Never')">Click for Half Life 3</button>
   <br/>
   <br/>
   <button type="button" onclick="alert('Deleting System 32')">click me because why not</button>
   <br/>
   <br/>
-  <button type="button" onclick="alert('Deleting System 32')">clickme</button>
+  <button type="button" onclick="alert('Deleting Registry')">clickme</button>
 </div>
 
 </body>
