--- a/index.html
+++ b/index.html
@@ -45,11 +45,30 @@ body {
   color: white;
 }
 
+.box {
+  height: 600px;
+  flex-shrink: 0;
+  border-radius: 100px;
+  background: rgba(0, 0, 0, 0.70);
+}
+
 h1 {
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+  padding: 40px;
+  flex-shrink: 0;
+  color: #FFF;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal; 
 }
 h2 {
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif 
+  color: #FFF;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 200;
+  line-height: normal;
 }
 p {
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
@@ -70,7 +89,7 @@ marquee {
   <a href="https://sosobo-code.github.io/Secret.html">Admin access</a>
 </div>
 
-<div>
+<div class="box">
   <h1>Welcome to Arrshan's homepage!</h1>
   <h2>This will become really cool in the future</h2>
   <h2>There are a few links click on one to be transported to a new site</h2>
