--- a/Secretfound.html
+++ b/Secretfound.html
@@ -36,7 +36,7 @@ body {
 }
 
 .topnav a:hover {
-  background-color: grey;
+  background-color: rgb(45, 131, 251);
   color:#ffffff;
 }
 
@@ -45,11 +45,31 @@ body {
   color: white;
 }
 
+.box {
+  margin: 50px;
+  padding: 60px;
+  flex-shrink: 0;
+  border-radius: 150px;
+  background: rgba(0, 0, 0, 0.70);
+}
+
 h1 {
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+  padding: 5px;
+  flex-shrink: 0;
+  color: #FFF;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal; 
 }
 h2 {
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif 
+  color: #FFF;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 200;
+  line-height: normal;
 }
 p {
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
