--- a/Secret.html
+++ b/Secret.html
@@ -3,16 +3,15 @@
 <head>
  <title>passowrd</title>
  <style>
-  body {
+body {
   margin: 0;
   font-family: sans-serif;
   text-align: center;
   color: white;
-  background: linear-gradient(90deg, #0cb6c9, #005792, #46c607);
+  background: linear-gradient(90deg, #a49262, #005792, #d8f8a1);
   background-size: 400% 400%;
   animation: gradientBG 10s ease infinite;
 }
-
 
 
 @keyframes gradientBG {
@@ -20,6 +19,7 @@
   50% { background-position: 100% 50%; }
   100% { background-position: 0% 50%; }
 }
+
 .topnav {
   overflow: hidden;
   background-color:rgba(0, 0, 0, 0.203);
@@ -36,20 +36,40 @@
 }
 
 .topnav a:hover {
-  background-color: grey;
+  background-color: rgb(45, 131, 251);
   color:#ffffff;
 }
 
 .topnav a.active {
-  background-color: #f8dfa1;
+  background-color: #2b96de;
   color: white;
 }
 
+.box {
+  margin: 50px;
+  padding: 60px;
+  flex-shrink: 0;
+  border-radius: 150px;
+  background: rgba(0, 0, 0, 0.70);
+}
+
 h1 {
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+  padding: 5px;
+  flex-shrink: 0;
+  color: #FFF;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal; 
 }
 h2 {
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif 
+  color: #FFF;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 200;
+  line-height: normal;
 }
 p {
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
