--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body {
 }
 
 .topnav a:hover {
-  background-color: grey;
+  background-color: rgb(45, 131, 251);
   color:#ffffff;
 }
 
@@ -46,14 +46,15 @@ body {
 }
 
 .box {
-  height: 600px;
+  margin: 50px;
+  padding: 60px;
   flex-shrink: 0;
-  border-radius: 100px;
+  border-radius: 150px;
   background: rgba(0, 0, 0, 0.70);
 }
 
 h1 {
-  padding: 40px;
+  padding: 5px;
   flex-shrink: 0;
   color: #FFF;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
