--- a/Interactions.html
+++ b/Interactions.html
@@ -8,7 +8,7 @@ body {
   font-family: sans-serif;
   text-align: center;
   color: white;
-  background: linear-gradient(90deg, #cc059a, #1382cc, #b004e4);
+  background: linear-gradient(90deg, #a49262, #005792, #d8f8a1);
   background-size: 400% 400%;
   animation: gradientBG 10s ease infinite;
 }
@@ -36,8 +36,8 @@ body {
 }
 
 .topnav a:hover {
-  background-color: grey;
-  color:#2b96de;
+  background-color: rgb(45, 131, 251);
+  color:#ffffff;
 }
 
 .topnav a.active {
@@ -45,11 +45,31 @@ body {
   color: white;
 }
 
+.box {
+  margin: 50px;
+  padding: 60px;
+  flex-shrink: 0;
+  border-radius: 150px;
+  background: rgba(0, 0, 0, 0.70);
+}
+
 h1 {
-  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+  padding: 5px;
+  flex-shrink: 0;
+  color: #FFF;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 50px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal; 
 }
 h2 {
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif 
+  color: #FFF;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 200;
+  line-height: normal;
 }
 p {
   font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
