--- a/Interactions.html
+++ b/Interactions.html
@@ -53,6 +53,14 @@ body {
   background: rgba(0, 0, 0, 0.70);
 }
 
+button {
+  margin: 5px;
+  padding: 5px;
+  flex-shrink: 0;
+  border-radius: 50px;
+  background: #FFF;
+}
+
 h1 {
   padding: 5px;
   flex-shrink: 0;
@@ -100,8 +108,9 @@ marquee {
   <marquee scrollamount="15">I am a moving text</marquee>
   <marquee scrollamount="20">Marquee?</marquee>
   <marquee scrollamount="25">Yes, it is marquee</marquee>
+  </div>
   
-  
+  <div class="buttons">
   <button type="button" onclick="alert('Your Gift Voucher code is ((Script Error))')">Click me for $1,000,000 Amazon Voucher</button>
   <br/>
   <br/>
