--- a/Secretfound.html
+++ b/Secretfound.html
@@ -90,9 +90,9 @@ marquee {
   <a href="https://sosobo-code.github.io/Secret.html">Admin access</a>
 </div>
 
-<div>
+<div class="box">
   <h1>Welcome to Arrshan Eats!</h1>
-</div>
 <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);"width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2F8IwtmW8mcWkdvBIZF9W8rn%2FArrshan-Eats%3Ftype%3Ddesign%26node-id%3D154-22%26t%3DwMsjiPBgcTGUejbC-1%26scaling%3Dmin-zoom%26page-id%3D0%253A1%26starting-point-node-id%3D154%253A22%26mode%3Ddesign" allowfullscreen></iframe>
+</div>
 </body>
 </html>
