--- a/Secret.html
+++ b/Secret.html
@@ -107,10 +107,13 @@ marquee {
         alert("Popup window")
         </script>   
     </script>
- <h1 style="font-size: 30pt;">Enter password</h1>
- <p>Please enter the password.</p>
- <p>Password:<input id="passwordBox" type="password"/></p>
- <a href="https://sosobo-code.github.io/Secretfound.html" onclick="return checkPassword();">
-  <p>Click here to Submit</p>
+<div class="box">
+<h1 style="font-size: 30pt;">Enter password</h1>
+<p>Please enter the password.</p>
+<p>Password:<input id="passwordBox" type="password"/></p>
+<a href="https://sosobo-code.github.io/Secretfound.html" onclick="return checkPassword();">
+</a>
+<p>Click here to Submit</p>
+</div>
 </body>
 </html>
