--- a/Secret.html
+++ b/Secret.html
@@ -77,6 +77,15 @@ p {
 marquee {
   font-family:'Courier New', Courier, monospace
 }
+
+a {
+  color: #FFF;
+  font-family: Inter;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
 </style>
 </head>
 <body>
