--- a/Secretfound.html
+++ b/Secretfound.html
@@ -54,6 +54,7 @@ body {
 }
 
 h1 {
+  padding: 5px;
   flex-shrink: 0;
   color: #FFF;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
