--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ marquee {
 </div>
 
 <div class="box">
-  <h1>Welcome to Arrshan's homepage!</h1>
+  <h1>Welcome to Arrshans homepage!</h1>
   <h2>This will become really cool in the future</h2>
   <h2>There are a few links click on one to be transported to a new site</h2>
 </div>
